# pyxform

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  CHANGES.txt  MANIFEST.in  Pipfile  README  README.mkdn  README.rst  __init__.py  appveyor.yml  builder.py  clean_for_build.py  dev_requirements.in  dev_requirements.pip  instance.py  pre-commit.sh  pyproject.toml  question.py  question_type_dictionary.py  question_types.xls  requirements.in  requirements.pip  section.py  setup.cfg  setup.py  survey.py  survey_element.py  utils.py  xls2json.py  xls2xform.py
.circleci/: config.yml
.config/: flake8  pycodestyle
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: pypi-publish.yml  pypi.yml  release.yml  verify.yml
contrib/images/: Dockerfile  docker-compose.yml
docs/: Makefile
docs/example_survey/: household.xls
docs/source/: conf.py  index.rst
fixers/: fix_unicode.py
odk_validate/: __init__.py
pmaxform/: __init__.py  builder.py  constants.py  file_utils.py  instance.py  question.py  question_type_dictionary.py  survey.py  survey_element.py  translator.py  utils.py  xform2json.py  xls2json.py  xls2json_old.py  xls2xform.py
pmaxform/odk_validate/: README.rst  __init__.py
pmaxform/question_types/: nigeria.xls
pmaxform/tests/: __init__.py  attribute_columns_test.py  file_utils_test.py  j2x_question_tests.py  new_cascading_select_test.py  test_file_type.py  test_osm.py  tests_by_file.py  tutorial_test.py  xform2json_test.py  xlsform_spec_test.py  xml_tests.py
pmaxform/tests_v1/: pyxform_test_case.py  test_pyxformtestcase.py
pmaxform/translators/: nigeria.json
pyxform/: __init__.py  aliases.py  builder.py  cascade_plan.txt  constants.py  entity_declaration.py  errors.py  external_instance.py  file_utils.py  instance.py  instance_info.py  json_form_schema.json  question.py  question_type_dictionary.py  section.py  survey.py  survey_element.py  translator.py  utils.py  xform2json.py  xform_instance_parser.py  xls2json.py  xls2json_backends.py  xls2xform.py  xlsparseutils.py
pyxform/elements/: action.py  element.py
pyxform/entities/: entities_parsing.py  entity_declaration.py  label.py
pyxform/odk_validate/: README.rst  __init__.py  errors.py
pyxform/parsing/: expression.py  instance_expression.py  parameters.py  sheet_headers.py
pyxform/question_types/: all.xls  base.xls  beorse.xls
pyxform/survey_elements/: attribute.py  label.py
pyxform/test_utils/: pyxform_test_case.py
pyxform/tests/: __init__.py  attribute_columns_test.py  attributecolumnstest.py  bug_test.py  bug_tests.py  builder_tests.py  dump_and_load_tests.py  enketo_validate_tests.py  file_utils_test.py  group_test.py  include.xls  j2x_question_tests.py  j2x_test_creation.py  j2x_test_instantiation.py  j2x_test_xform_build_preparation.py  js2x_test_import_from_json.py  json2xform_test.py  loop.xls  loop_tests.py  new_cascading_select_test.py  odk_validate_tests.py  or_other_test.py  select_one_external_test.py  settings_test.py  test_area.py  test_file_type.py  test_osm.py  test_validator_update.py  test_validator_util.py  tests_by_file.py  tutorial_test.py  utils.py  xform2json_test.py  xls2json_test.py  xls2json_tests.py  xls2xform_tests.py  xlsform_spec_test.py  xml_tests.py
pyxform/tests_v1/: pyxform_test_case.py  test_allow_mock_accuracy.py  test_area.py  test_audio_quality.py  test_audit.py  test_background_audio.py  test_bind_conversions.py  test_bug_missing_headers.py  test_bug_round_calculation.py  test_choices_sheet.py  test_custom_xml_namespaces.py  test_dynamic_default.py  test_external_instances.py  test_external_instances_for_selects.py  test_fields.py  test_file.py  test_for_loop.py  test_form_name.py  test_geo.py  test_groups.py  test_guidance_hint.py  test_inline_translations.py  test_labels.py  test_language_warnings.py  test_last_saved.py  test_max_pixels.py  test_metadata.py  test_mismatched_brackets.py  test_osm.py  test_pyxformtestcase.py  test_randomize_itemsets.py  test_range.py  test_rank.py  test_repeat.py  test_repeat_template.py  test_repeated_complex_relevancies.py  test_repeats.py  test_secondary_instance_translations.py  test_selects.py  test_set_geopoint.py  (+25 more)
pyxform/util/: enum.py
pyxform/validators/: error_cleaner.py  updater.py  util.py
pyxform/xls/: tutorial.xls
question_types/: base.xls  nigeria.xls
setup_scripts/: conditional_dep_install.sh
tests/: attributecolumnstest.py  bug_tests.py  builder_tests.py  dump_and_load_tests.py  file_utils_test.py  group_test.py  include_json.xls  j2x_question_tests.py  j2x_test_creation.py  j2x_test_instantiation.py  j2x_test_xform_build_preparation.py  js2x_test_import_from_json.py  json2xform_test.py  loop.xls  loop_tests.py  or_other_test.py  pyxform_test_case.py  select_one_external_test.py  settings_test.py  test_allow_mock_accuracy.py  test_area.py  test_audio_quality.py  test_audit.py  test_background_audio.py  test_background_geopoint.py  test_bind_conversions.py  test_bug_missing_headers.py  test_bug_round_calculation.py  test_builder.py  test_choices_sheet.py  test_custom_xml_namespaces.py  test_dump_and_load.py  test_dynamic_default.py  test_entities.py  test_entities_create.py  test_entities_update.py  test_external_instances.py  test_external_instances_for_selects.py  test_fieldlist_labels.py  test_fields.py  (+75 more)
tests/bug_example_xls/: UCL_Biomass_Plot_Form.xlsx  bad_calc.xlsx  big-image_choice_missing_image.xlsx  big-image_survey_missing_image.xlsx  extra_columns.xls  image-description_choice_missing_image.xlsx  image-description_survey_missing_image.xlsx
tests/entities/: test_create_repeat.py  test_create_survey.py  test_entities.py  test_update_repeat.py  test_update_survey.py
tests/example_xls/: __init__.py  case_insensitivity.csv  case_insensitivity.md  case_insensitivity.xls  case_insensitivity.xlsx  corrupt.xls  empty.xlsx  empty_sheets.xlsx  extra_columns.xlsx  extra_sheet_names.xlsx  field-list.xlsx  group.csv  group.md  group.xls  group.xlsx  image-description.xlsx  image-description_translated.xlsx  include.md  include.xlsx  include_json.md  loop.md  (+17 more)
(+190 files in other folders)
