[project]
name = "pyxform"
version = "2.0.0"
authors = [
  {name = "github.com/xlsform", email = "info@xlsform.org"},
]
description = "A Python package to create XForms for ODK Collect."
readme = "README.rst"
requires-python = ">=3.7"
dependencies = [
  "xlrd==2.0.1",
  "openpyxl==3.1.2",
  "defusedxml==0.7.1",
]

[project.optional-dependencies]
# Install with `pip install pyxform[dev]`.
dev = [
  "nose==1.3.7",        # Run tests
  "formencode==2.1.0",  # Compare XML
  "lxml==5.1.0",        # XPath test expressions
  "psutil==5.9.7",      # Process info for performance tests
  "ruff==0.1.11",       # Format and lint
]

[project.urls]
Homepage = "https://pypi.python.org/pypi/pyxform/"
Repository = "https://github.com/XLSForm/pyxform/"

[project.scripts]
xlsform = "pyxform.xls2xform:main_cli"
pyxform_validator_update = "pyxform.validators.updater:main_cli"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "pyxform"

[tool.flit.sdist]
exclude = ["docs", "tests"]

[tool.ruff]
line-length = 90
target-version = "py38"
fix = true
show-fixes = true
show-source = true
src = ["pyxform", "tests"]

[tool.ruff.lint]
# By default, ruff enables flake8's F rules, along with a subset of the E rules.
extend-select = [
  "I",  # isort
]
# Potentially useful rule sets to enable in future:
select = [
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "E",  # pycodestyle error
#  "ERA",  # eradicate (commented out code)
  "F",  # pyflakes
  "I",  # isort
  "PERF",  # perflint
  "PIE",  # flake8-pie
  "PL",  # pylint
#  "PTH",  # flake8-use-pathlib
  "PYI",  # flake8-pyi
#  "RET",  # flake8-return
  "RUF",  # ruff-specific rules
  "S",  # flake8-bandit
#  "SIM",  # flake8-simplify
  "TRY",  # tryceratops
#  "UP",  # pyupgrade
  "UP004",
  "UP005",
  "UP008",
  "UP009",
  "UP018",
  "UP020",
  "UP024",
  "UP028",
  "UP030",
  "UP035",
  "W",  # pycodestyle warning
]
ignore = [
  "E501",  # line-too-long (we have a lot of long strings)
  "F821",  # undefined-name (doesn't work well with type hints, ruff 0.1.11).
  "PERF401",  # manual-list-comprehension (false positives on selective transforms)
  "PERF402",  # manual-list-copy (false positives on selective transforms)
  "PLR0911",  # too-many-return-statements (complexity not useful to warn every time)
  "PLR0912",  # too-many-branches (complexity not useful to warn every time)
  "PLR0913",  # too-many-arguments (complexity not useful to warn every time)
  "PLR0915",  # too-many-statements (complexity not useful to warn every time)
  "PLR2004",  # magic-value-comparison (many tests expect certain numbers of things)
  "PLW2901",  # redefined-loop-name (usually not a bug)
  "RUF001",  # ambiguous-unicode-character-string (false positives on unicode tests)
  "S310",  # suspicious-url-open-usage (prone to false positives, ruff 0.1.11)
  "S320",  # suspicious-xmle-tree-usage (according to defusedxml author lxml is safe)
  "S603",  # subprocess-without-shell-equals-true (prone to false positives, ruff 0.1.11)
  "TRY003",  # raise-vanilla-args (reasonable lint but would require large refactor)
]
# per-file-ignores = {"tests/*" = ["E501"]}
